# metaeffekt-scancode-service

./: .dockerignore  .gitignore  Dockerfile  NOTICE  README.md  pyproject.toml  requirements.in  requirements.txt  requirements_arm64.txt  tox.ini
src/: scancode_service.py
src/scancode_extensions/: __init__.py  allrights_plugin.py  config.py  resource.py  service.py  utils.py  webserver.py
src/scancode_extensions/resources/: log_config.yaml
tests/: conftest.py  test.json
tests/codebase/: test_paralleling_codebase.py  test_scancode_codebase.py
tests/codebase/data/: scan_output.json
tests/scancode_service/: test_calculate_paths.py  test_dataclasses.py  test_fastapi.py  test_scancode.py  test_service.py
tests/small_files/: test_many.py
tests/understand_scancode/: test_api.py  test_pluginmanager.py
tests/utils/: test_use_temp_file.py
