[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scancode-service"
version = "0.5.1"
requires-python = ">= 3.10"
dependencies = [
    "click==8.2.2",
    "fastapi[all]==0.115.11",
    "pyyaml>=6.0.2",
    "scancode-toolkit==32.4.1 ; platform_machine == 'x86_64'"
]

[project.scripts]
scancode-service = "scancode_extensions.webserver:start"

[tool.setuptools.package-data]
"scancode_extensions.resources" = ["*.yaml"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
log_cli = "True"
log_cli_level = "DEBUG"



[dependency-groups]
dev = [
    "faker>=37.0.2",
    "faker-file>=0.18.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
]
