[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scancode-service"
version = "0.6.2"
requires-python = ">= 3.10"
dependencies = [
    "commoncode>=31.0.0",
    "click==8.3.1",
    "fastapi[all]==0.128.0",
    "pyyaml>=6.0.3",
    "scancode-toolkit==32.5.0"
]

[project.scripts]
scancode-service = "scancode_extensions.webserver:start"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"scancode_extensions.resources" = ["*.yaml"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
log_cli = "True"
log_cli_level = "DEBUG"

[pytest]
pythonpath = ["src"]
addopts = ["--import-mode=importlib"]

[dependency-groups]
dev = [
    "faker>=40.1.2",
    "faker-file>=0.18.4",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
